[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
branch = 'master'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
branch = 'master'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
branch = 'master'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
branch = 'master'

[dependencies.substrate-castor-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'master'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
branch = 'master'

[[bin]]
name = 'substrate-castor'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-castor'
version = '1.0.0'
